--- a/images/templates/images/index.html
+++ b/images/templates/images/index.html
@@ -4,14 +4,14 @@
 Available Cases:
 <ul>
 {% for case in case_list %}
-	<li><a href="case/{{ case.id }}/">{{ case.title }}</a></li>
+	<li><a href="{% url 'case' case.id %}/">{{ case.title }}</a></li>
 {% endfor %}
 </ul>
 
 Tags:
 <ul>
 {% for tag in tag_list %}
-	<li><a href="tag/{{ tag }}/">{{ tag }}</a></li>
+	<li><a href="{% url 'tag' tag %}/">{{ tag }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
