--- a/images/templates/images/base.html
+++ b/images/templates/images/base.html
@@ -25,7 +25,15 @@
             <a class="brand" href="{{ URL_PREFIX }}">PImA - The Pathology Image Archive</a>
             <ul class="nav">
                 <li><a href="{% url 'index' %}" class="">Home</a></li>
-		<li>{% load socialaccount %}{% load account %}<a href="{% provider_login_url "google" %}">Google</a></li>
+		<li class="pull-right">
+		    {% load socialaccount %}
+		    {% load account %}
+		    {% if user.is_authenticated %}
+			<a href="/accounts/logout">Logged in as {% user_display user %} - Logout</a>
+		    {% else %}
+			<a href={% provider_login_url "google" %}>Log in with Google</a>
+		    {% endif %}
+		</li>
             </ul>
         </div>
     </div>
