--- a/images/templates/images/case.html
+++ b/images/templates/images/case.html
@@ -13,7 +13,7 @@
 <div class="row">
 {% for resource in resources %}
 	<div class="span3">
-	<a href="{% url 'resource' resource.id %}"><img width="200" src="{{ MEDIA_URL }}{{ resource.file }}" class="thumbnail"/>
+	<a href="{% url 'resource' resource.id %}"><img width="200" src="{{ resource.file.url }}" class="thumbnail"/>
 	{{ resource }}</a>
 	</div>
 {% endfor %}
